examples/test/testpolicy18376.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18376
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key49: value7
      key26: value47
      key5: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value33
          key46: value3
          key1: value5
      podSelector:
        matchLabels:
          key45: value37
